--- a/selection/codenation_regression_techniques.ipynb
+++ b/selection/codenation_regression_techniques.ipynb
@@ -7201,7 +7201,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resposta = pd.DataFrame({'NU_INSCRICAO':df_test_n.NU_INSCRICAO,'NU_NOTA_MT':y_sub})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resposta.loc[resposta.NU_NOTA_MT < 0 , 'NU_NOTA_MT'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resposta.to_csv(\"answer2.csv\", index= False, line_terminator='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4576 entries, 0 to 4575\n",
+      "Data columns (total 2 columns):\n",
+      "NU_INSCRICAO    4576 non-null object\n",
+      "NU_NOTA_MT      4576 non-null float32\n",
+      "dtypes: float32(1), object(1)\n",
+      "memory usage: 53.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "resposta.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NU_INSCRICAO</th>\n",
+       "      <th>NU_NOTA_MT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>73ff9fcc02f0a99919906c942c2e1a1042cdcf98</td>\n",
+       "      <td>430.081146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>71a95f9f1b91a82c65ad94abbdf9f54e6066f968</td>\n",
+       "      <td>450.600433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>b38a03232f43b11c9d0788abaf060f7366053b6d</td>\n",
+       "      <td>598.308533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>70b682d9a3636be23f6120fa9d6b164eb3c6002d</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>715494628a50142ce8cb17191cfe6d0f3cae0934</td>\n",
+       "      <td>565.238586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4571</td>\n",
+       "      <td>dac0f22429c7f8e3931d0abaf5dfc8e5c772a48b</td>\n",
+       "      <td>443.060547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4572</td>\n",
+       "      <td>a75fa8770257e7c9368d059fe53d9ef431f4bdef</td>\n",
+       "      <td>455.133057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4573</td>\n",
+       "      <td>655fa6306720ff16e825903b5422a46608a77545</td>\n",
+       "      <td>675.378357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4574</td>\n",
+       "      <td>1f4bc3e3d56212d500625bfe8ac78ccff4362293</td>\n",
+       "      <td>453.417145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4575</td>\n",
+       "      <td>adf0d15b54317b6564ef56dad2b775bbb0ef50cc</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4576 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  NU_INSCRICAO  NU_NOTA_MT\n",
+       "0     73ff9fcc02f0a99919906c942c2e1a1042cdcf98  430.081146\n",
+       "1     71a95f9f1b91a82c65ad94abbdf9f54e6066f968  450.600433\n",
+       "2     b38a03232f43b11c9d0788abaf060f7366053b6d  598.308533\n",
+       "3     70b682d9a3636be23f6120fa9d6b164eb3c6002d    0.000000\n",
+       "4     715494628a50142ce8cb17191cfe6d0f3cae0934  565.238586\n",
+       "...                                        ...         ...\n",
+       "4571  dac0f22429c7f8e3931d0abaf5dfc8e5c772a48b  443.060547\n",
+       "4572  a75fa8770257e7c9368d059fe53d9ef431f4bdef  455.133057\n",
+       "4573  655fa6306720ff16e825903b5422a46608a77545  675.378357\n",
+       "4574  1f4bc3e3d56212d500625bfe8ac78ccff4362293  453.417145\n",
+       "4575  adf0d15b54317b6564ef56dad2b775bbb0ef50cc    0.000000\n",
+       "\n",
+       "[4576 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resposta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -7307,7 +7474,7 @@
        "[4576 rows x 2 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
