--- a/modulo_0_selection/codenation_regression_techniques.ipynb
+++ b/modulo_0_selection/codenation_regression_techniques.ipynb
@@ -153,21 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-7c5401bcb448>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Base de Treino\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdf_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"testfiles/train.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;31m# Base de Teste\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mdf_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"testfiles/test.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Base de Treino\n",
     "df_train = pd.read_csv(\"testfiles/train.csv\")\n",
@@ -177,21 +165,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-02b84ea97cf7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mNU_INSCRICAO\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnunique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mNU_ANO\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'df_train' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "((13730, 167), 13730, 2016    13730\n",
+       " Name: NU_ANO, dtype: int64)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1578,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -1602,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1599,7 @@
        "((13730, 48), (4576, 47), (18306, 48), (18306, 33), (18306, 15))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1622,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1630,21 +1618,22 @@
      "output_type": "stream",
      "text": [
       "Int64:\n",
-      "['TP_COR_RACA' 'TP_ANO_CONCLUIU' 'CO_UF_RESIDENCIA' 'TP_PRESENCA_LC'\n",
-      " 'TP_NACIONALIDADE' 'IN_SURDEZ' 'TP_LINGUA' 'IN_GESTANTE'\n",
-      " 'TP_ST_CONCLUSAO' 'IN_SABATISTA' 'TP_PRESENCA_CN' 'IN_BAIXA_VISAO'\n",
-      " 'IN_DISCALCULIA' 'IN_IDOSO' 'IN_TREINEIRO' 'TP_ESCOLA' 'NU_IDADE'\n",
-      " 'TP_PRESENCA_CH' 'IN_DISLEXIA' 'IN_CEGUEIRA']\n",
+      "['IN_CEGUEIRA' 'TP_COR_RACA' 'TP_PRESENCA_CN' 'IN_IDOSO' 'TP_LINGUA'\n",
+      " 'IN_DISLEXIA' 'IN_GESTANTE' 'TP_NACIONALIDADE' 'TP_ESCOLA'\n",
+      " 'IN_DISCALCULIA' 'NU_IDADE' 'TP_PRESENCA_CH' 'TP_PRESENCA_LC'\n",
+      " 'IN_SABATISTA' 'IN_SURDEZ' 'TP_ST_CONCLUSAO' 'CO_UF_RESIDENCIA'\n",
+      " 'IN_BAIXA_VISAO' 'TP_ANO_CONCLUIU' 'IN_TREINEIRO']\n",
       "\n",
       "Float64:\n",
-      "['NU_NOTA_COMP4' 'NU_NOTA_COMP3' 'NU_NOTA_CH' 'TP_DEPENDENCIA_ADM_ESC'\n",
-      " 'TP_STATUS_REDACAO' 'TP_ENSINO' 'NU_NOTA_CN' 'NU_NOTA_COMP2'\n",
-      " 'NU_NOTA_COMP5' 'NU_NOTA_LC' 'NU_NOTA_REDACAO' 'NU_NOTA_COMP1' 'istrain']\n",
+      "['NU_NOTA_COMP3' 'NU_NOTA_CH' 'TP_DEPENDENCIA_ADM_ESC' 'TP_ENSINO'\n",
+      " 'NU_NOTA_LC' 'NU_NOTA_COMP5' 'NU_NOTA_REDACAO' 'NU_NOTA_COMP4'\n",
+      " 'NU_NOTA_CN' 'NU_NOTA_COMP2' 'NU_NOTA_COMP1' 'TP_STATUS_REDACAO'\n",
+      " 'istrain']\n",
       "\n",
       "Strings:\n",
-      "['Q001' 'CO_PROVA_LC' 'SG_UF_RESIDENCIA' 'Q002' 'Q047' 'NU_INSCRICAO'\n",
-      " 'Q027' 'CO_PROVA_MT' 'CO_PROVA_CH' 'Q024' 'Q026' 'CO_PROVA_CN' 'Q006'\n",
-      " 'TP_SEXO' 'Q025']\n"
+      "['NU_INSCRICAO' 'Q024' 'Q027' 'CO_PROVA_CN' 'Q002' 'CO_PROVA_CH'\n",
+      " 'SG_UF_RESIDENCIA' 'CO_PROVA_MT' 'TP_SEXO' 'Q047' 'Q025' 'Q026' 'Q001'\n",
+      " 'CO_PROVA_LC' 'Q006']\n"
      ]
     }
    ],
@@ -1657,6 +1646,96 @@
     "print('')\n",
     "print('Strings:')\n",
     "print(df_full.select_dtypes(include='object').columns.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Int64:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('Int64:')\n",
+    "df_full.dtypes.loc['IN_CEGUEIRA']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'contains'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-44-aa81951fe112>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf_full\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtypes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_full\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtypes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontains\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"int\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5177\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5178\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5179\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5180\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5181\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'contains'"
+     ]
+    }
+   ],
+   "source": [
+    "df_full.dtypes[\"int\".isdf_full.dtypes].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"int\" in str(df_full.dtypes.loc['IN_CEGUEIRA'])# is \"int\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " df_full['IN_CEGUEIRA']"
    ]
   },
   {
