--- a/modulo_4/main.ipynb
+++ b/modulo_4/main.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,17 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([17.45144861, 22.08980105, 23.90362149, ..., 16.5752277 ,\n",
-       "        8.32709343, 13.74017257])"
+       "array([17.52624644, 17.76043483, 19.95031239, ..., 24.65294677,\n",
+       "       19.29037238, 15.99634783])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,6 +298,30 @@
     "Qual a diferença entre os quartis (Q1, Q2 e Q3) das variáveis `normal` e `binomial` de `dataframe`? Responda como uma tupla de três elementos arredondados para três casas decimais.\n",
     "\n",
     "Em outra palavras, sejam `q1_norm`, `q2_norm` e `q3_norm` os quantis da variável `normal` e `q1_binom`, `q2_binom` e `q3_binom` os quantis da variável `binom`, qual a diferença `(q1_norm - q1 binom, q2_norm - q2_binom, q3_norm - q3_binom)`?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.31, -0.01, -0.316)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def q1():\n",
+    "    q1_norm, q2_norm, q3_norm = df.normal.quantile([0.25, 0.5, 0.75])\n",
+    "    q1_binom, q2_binom, q3_binom = df.binomial.quantile([0.25, 0.5, 0.75])\n",
+    "    return (round(float(q1_norm - q1_binom),3), round(float(q2_norm - q2_binom),3), round(float(q3_norm - q3_binom),3))\n",
+    "q1()"
    ]
   },
   {
