--- a/modulo_8/grades_prediction.ipynb
+++ b/modulo_8/grades_prediction.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Problema:** Desevolvimento de um modelo para predizer a nota da prova de matemática (coluna NU_NOTA_MT) de quem participou do ENEM 2016.\n",
+    "\n",
+    "**Target:** Note de matemática no ENEM \"NU_NOTA_MT\"  \n",
+    "\n",
+    "**Formato de resposta:** Arquivo csv \"answer.csv\" com duas colunas: NU_INSCRICAO e NU_NOTA_MT.\n",
+    "\n",
+    "**Métrica:** RMSE  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -393,6 +406,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Labeling Ordinal\n",
+    "- Preenchimento de variáveis categóricas nulas\n",
+    "- Dummies\n",
+    "- Preenchimento de variáveis constantes nulas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -611,6 +634,15 @@
    "metadata": {},
    "source": [
     "### Exploratory Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Os dados foram bem explorados na primeira sessão do desafio, \"modulo_0\""
    ]
   },
   {
